FIX: native shim bug

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
   </head>
 
   <body>
-    <%= yield %>
+    <<%= page_name %>-page layout="default">
+      <%= yield %>
+    </<%= page_name %>-page>
   </body>
 </html>
