FIX: custom element polyfill bug

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <<%= page_name %>-page layout="default">
+    <<%= page_name %>-page layout="default" class="page">
       <%= yield %>
     </<%= page_name %>-page>
   </body>
